--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -133,7 +133,7 @@ parameters:
                         extents:
                             start: [361000,5619270,371150,5625960]
                             max: [331000,5319270,401150,5925960]
-                        scales: [25000000, 10000000,5000000,1000000,500000,250000,125000,75000,50000,25000,10000,7500,5000,2500,1000,500]
+                        scales: [500000,250000,125000,75000,50000,25000,10000,7500,5000,2500,1000,500]
                         maxResolution: 'auto'
                         otherSrs: ["EPSG:25832","EPSG:31466","EPSG:31467","EPSG:900913","EPSG:4326"]
                     zoombar:
@@ -411,7 +411,7 @@ parameters:
                         extents:
                             start: [361000,5619270,371150,5625960]
                             max: [331000,5319270,401150,5925960]
-                        scales: [25000000, 10000000,1000000,500000,250000,100000,50000,10000,5000,2500,1000,500]
+                        scales: [500000,250000,125000,75000,50000,25000,10000,7500,5000,2500,1000,500]
                         maxResolution: 'auto'
                         otherSrs: ["EPSG:25832","EPSG:31466","EPSG:31467","EPSG:900913","EPSG:4326"]
                     zoombar:
