changed max_extent and scales for D-A-CH

--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -132,8 +132,8 @@ parameters:
                         units: m
                         extents:
                             start: [361000,5619270,371150,5625960]
-                            max: [331000,5319270,401150,5925960]
-                        scales: [500000,250000,125000,75000,50000,25000,10000,7500,5000,2500,1000,500]
+                            max: [201000,3519270,1251150,6325960]   
+                        scales: [7500000,5000000,100000,50000,25000,10000,7500,5000,2500,1000,500]
                         maxResolution: 'auto'
                         otherSrs: ["EPSG:25832","EPSG:31466","EPSG:31467","EPSG:900913","EPSG:4326"]
                     zoombar:
