--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -132,7 +132,7 @@ parameters:
                         units: m
                         extents:
                             start: [361000,5619270,371150,5625960]
-                            max: [201000,3519270,1251150,6325960]   
+                            max: [201000,3519270,1251150,6325960]
                         scales: [7500000,5000000,100000,50000,25000,10000,7500,5000,2500,1000,500]
                         maxResolution: 'auto'
                         otherSrs: ["EPSG:25832","EPSG:31466","EPSG:31467","EPSG:900913","EPSG:4326"]
@@ -448,22 +448,14 @@ parameters:
                         autoOpen: false
                         print_directly: true
                         templates:
-                            a4portrait:
-                                label: A4 Portrait
-                                format: a4
-                            a4landscape:
-                                label: A4 Landscape
-                                format: a4
-                            a3portrait:
-                                label: A3 Portrait
-                                format: a3
-                            a3landscape:
-                                label: A3 Landscape
-                                format: a3
+                            - { template: a4portrait, label: A4 Portrait, format: a4}
+                            - { template: a4landscape, label: A4 Landscape, format: a4}
+                            - { template: a3portrait, label: A3 Portrait, format: a3}
+                            - { template: a3landscape, label: A3 Landscape, format: a3}
                         scales: [500, 1000, 5000, 10000, 25000]
                         quality_levels:
-                            72: Draft (72dpi)
-                            288: Document (288dpi)
+                            - { dpi: 72 , label: Draft (72dpi)}
+                            - { dpi: 288,  label: Document (288dpi)}
                         rotatable: true
                         optional_fields: ~
                     lineruler:
