--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -15,7 +15,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  %locale%
-    session: ~
+    session:
+        cookie_httponly: %framework.session.cookie_httponly%
 
 # Twig Configuration
 twig:
@@ -70,8 +71,8 @@ fom_manager:
 
 # FOM User Configuration
 fom_user:
-    selfregister: true
-    reset_password: true
+    selfregister: %fom.selfregister%
+    reset_password: %fom.reset_password%
     max_registration_time: 1
     max_reset_time: 1
     mail_from_address: wizard@oz.net
